Fixed alignment on screens <940px wide.

--- a/css/screen.css
+++ b/css/screen.css
@@ -96,8 +96,8 @@ a:hover
 
 .contentwidth
 {
-	width:940px;
-	margin:0 auto;
+	width: 90%;
+	margin: 0 auto;
 }
 
 .left
